move figures into main text and switch bibliography format

--- a/header.tex
+++ b/header.tex
@@ -62,12 +62,14 @@
 % subcaption
 % \usepackage{subcaption}
 % hyperref
-%\usepackage[linkbordercolor={.67 .27 .27},citebordercolor={.09 .29 .54},urlbordercolor={.09 .29 .54}]{hyperref}
+% \usepackage[linkbordercolor={.67 .27 .27},citebordercolor={.09 .29 .54},urlbordercolor={.09 .29 .54}]{hyperref}
 \usepackage{hyperref}
 \hypersetup{colorlinks=true,
 linkcolor=[rgb]{.67 .27 .27},
 citecolor=[rgb]{.09 .29 .54},
 urlcolor=[rgb]{.09 .29 .54}}
+% \usepackage{natbib}
+\usepackage[doipre={doi:}]{uri}
 
 % color table cells http://goo.gl/ZmpJv
 \usepackage[table]{xcolor}
