--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -7,3 +7,10 @@ Indeed, investigating generic properties of a large class of dynamical systems w
 
 
 % The generic applicability of gaining a better understanding of the class of models investigated by May demonstrates the unequivocal value of deeper investigation.  However, work attempting to continue the development of the so-called May-Wigner stability theorem revealed that May's conjectured stability criterion was not as easy to demonstrate as was initially believed.
+
+\begin{figure*}[!ht]
+\centering
+\noindent\includegraphics[width=0.8\textwidth]{fig/biomodelexamples.pdf}
+\caption{{\bf Dynamical models in systems biology.} The top row represents a chemical reaction network (CRN) \cite{Shinar2010}, a gene regulatory network (GRN) \cite{Karlebach2008}, and an ecological regulatory network (ERN) \cite{Rohr2014} in terms of the graphical methods specific to each field mapped into the interaction graph, which provides a unified representation for networks across these fields. The second row represents a particular example of a system of differential equations that are used to model a biological network within each of the domains of application considered here. The third row shows the general form of a system of differential equations that can be used to model any network architecture within each domain.}
+\label{fig:biomodelexamples}
+\end{figure*}
