--- a/tex/results.tex
+++ b/tex/results.tex
@@ -74,7 +74,7 @@ points, we have an integer-valued random variable; and if the quantity is
 whether or not the system posesses a limit cycle, we have a binary random
 variable.
 
-A quality which is of interest to us is robustness whose evaluation requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters \footnote{We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the components as determined by the parameters and not only to perturbations of the state vector at a given point in time. For example, when the network of components and interactions corresponds to a gene-regulatory network, then mutation is one mechanism by which such perturbations may arise}.  We will quantify this as the probability that, if some property holds for a set of parameters, it will continue to hold if we make a random perturbation about those parameter values. To do so, we will introduce, in addition to the probability distribution $\mu$ described above, a family of probability distributions $\mu'$ such that $\mu'(x,y)$ encodes the conditional probability that a system with a parameter value $x$ will have its parameter values changed to $y$ under a perturbation.  For our biological models, we will be interested in large perturbations rather than the small or infinitesimal perturbations usually considered in the theory of dynamical systems.  Then, given a binary random variable $q$, we define its robustness as the following conditional probability where $\mathbf{1}_q(x)$ is the standard indicator function equal to $1$ when $x$ satisfies $q$ and $0$ otherwise:
+A quality of interest to us is robustness, which is related to the concept of structural stability \cite{Smale1967}, whose evaluation requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters \footnote{We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the components as determined by the parameters and not only to perturbations of the state vector at a given point in time. For example, when the network of components and interactions corresponds to a gene-regulatory network, then mutation is one mechanism by which such perturbations may arise}.  We will quantify this as the probability that, if some property holds for a set of parameters, it will continue to hold if we make a random perturbation about those parameter values. To do so, we will introduce, in addition to the probability distribution $\mu$ described above, a family of probability distributions $\mu'$ such that $\mu'(x,y)$ encodes the conditional probability that a system with a parameter value $x$ will have its parameter values changed to $y$ under a perturbation.  For our biological models, we will be interested in large perturbations rather than the small or infinitesimal perturbations usually considered in the theory of dynamical systems.  Then, given a binary random variable $q$, we define its robustness as the following conditional probability where $\mathbf{1}_q(x)$ is the standard indicator function equal to $1$ when $x$ satisfies $q$ and $0$ otherwise:
 \begin{align}\label{eq:robustness}
   R (q,\mu') =
   \frac{\int_S d\mu(x) \int_S d\mu'(x,y) \mathbf{1}_q(x) \mathbf{1}_q(y)}
@@ -414,12 +414,9 @@ v_i)^2 - \sum_{i=1}^n v_i^2)$, which is attained when $\hier(G_{max}) =
 G_{tot}$.  Hence, we conclude that $\langle R(\hbox{stab} (G), \mu') \rangle_m \le
 \langle R(\hbox{stab} (G_{\mathrm{max}}), \mu') \rangle_m$.
 
-The preceding argument demonstrates the manner in which robustness is
+The preceding argument demonstrates that robustness is
 maximized by maximizing the number of edges \emph{between} the strongly
 connected components of the graph underlying system interdependencies.
-And, the graph that has the latter property is that associated to the
-ordering, $G_{\mathrm{tot}}$, which also possess the highest degree of
-hierarchy. The fact that robustness is equivalent for any configuration
-of strongly connected components with an equivalent number of links
-between them demonstrates that it is invariant to permutations of
+And, the graph that has the latter property is that associated to the total
+ordering, $G_{\mathrm{tot}}$, which is also considered to possess the highest degree of hierarchy. The fact that robustness is equivalent for any configuration of strongly connected components with an equivalent number of links between them demonstrates that it is invariant to permutations of
 strongly connected components. Because the argument presented here is purely topological in nature, it does not depend at all upon details such as the system size or the specific form of the probability distribution from which the component interaction strengths are sampled.
